fix display visual overflow not clipping

--- a/src/component/bookmark/index.css
+++ b/src/component/bookmark/index.css
@@ -56,6 +56,7 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
+  overflow: hidden;
   clip-path: var(--bookmark-shape);
 }
 
@@ -126,6 +127,7 @@ html:not(.is-bookmark-edit) .bookmark:hover:after {
   height: 100%;
   display: flex;
   pointer-events: all;
+  overflow: hidden;
   clip-path: var(--bookmark-shape);
   transition: background-color var(--layout-transition-extra-fast);
   text-decoration: none;
@@ -284,9 +286,9 @@ html:not(.is-bookmark-edit) .bookmark:hover:after {
   height: 100%;
   z-index: 3;
   display: grid;
-  overflow: hidden;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(3, 1fr);
+  overflow: hidden;
   clip-path: var(--bookmark-shape);
   pointer-events: none;
 }
